tests/typing/fail/type-mismatch-01.rs
use rust_sync::sync;

sync! {
    node oui() = ()
    where
        o : int = 3.0;
}

fn main() {}
