tests/typing/fail/type-mismatch-01.stderr
error: type mismatch: left has type `int`, right has type `float`
 --> tests/typing/fail/type-mismatch-01.rs:6:9
  |
6 |         o : int = 3.0;
  |         ^
